@@ -604,6 +604,9 @@ void bind_session()
         .value("flag_duplicate_is_error", add_torrent_params::flag_duplicate_is_error)
         .value("flag_merge_resume_trackers", add_torrent_params::flag_merge_resume_trackers)
         .value("flag_update_subscribe", add_torrent_params::flag_update_subscribe)
+        .value("flag_super_seeding", add_torrent_params::flag_super_seeding)
+        .value("flag_sequential_download", add_torrent_params::flag_sequential_download)
+        .value("flag_use_resume_save_path", add_torrent_params::flag_use_resume_save_path)
     ;
     class_<cache_status>("cache_status")
         .def_readonly("blocks_written", &cache_status::blocks_written)
